# typescript-bazel-jasmine

./: BUILD.bazel  README.md  WORKSPACE  package.json
